feat: update authentication, make auth token send on header
