# router/auth.go
@@ -7,10 +7,10 @@ func SetupAuthRouter(r *gin.RouterGroup) {
 	auth := r.Group("/auth")
 	// Authentication Route
 	auth.POST("validate-google-id-token", authHandler.ValidateGoogleIdToken)
+	auth.POST("refresh-token", authHandler.RefreshToken)
 	auth.POST("send-mail-test", authHandler.SendEmailVerificationExample)
 
 	mustAuth := auth.Group("")
 	mustAuth.Use(authMiddleware.JwtAuthMiddleware)
 	// logout route
-	mustAuth.DELETE("invalidate-cookie", authHandler.InvalidateCookie)
 }
